# paradoxo-produtividade

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  zenodo.json
cadernos/: 01_analise_exploratoria.ipynb
reports/figures/: 01_analise_exploratoria.html
src/: analise_produtividade.py  carregar_dados.py
src/src/: __init__.py
