[metadata]
name = paradoxo-produtividade
version = 1.0.1
author = Lelis Murakami
author_email = lelis.murakami@gmail.com
description = Código e dados do estudo "Paradoxo da Produtividade: Impactos das Ferramentas No-Code e Low-Code no Desempenho de Desenvolvimento de Software"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lelimura/paradoxo-produtividade
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    numpy
    pandas
    matplotlib
    seaborn
    scikit-learn
    jupyter
